# dwyco

./: .gitignore  .travis.yml  QT6-cutover.txt  QTPROBLEMS.txt  README.md  README.txt  TOX_INTEGRATE.md  afl.pro  bots.pro  build_ssl.sh  dwycore.pro  fckbld  helpers.pro  lh.pro  lhcomp.pro  linux-deps.sh  newdll.bat  newdll.sh  opencode.json  phoobld.pro  phoobld.pro.wtf  phoobld.sh  qt.env  qt6-port-notes.txt  randobld.pro  readme-deps-mac-m2.md  readme-deps.md  rundeps.sh  selfsbld.pro  serverhelper.pro  vscode-java.json
bld/cdc32/: AGENTS.md  Android.mk  CMakeLists.txt  UBUNTU-COMPILE.txt  aconn.cc  aconn.h  acqfile.cc  acqfile.h  activeuid.cpp  activeuid.h  aq.cc  aq.h  aqaud.cc  aqaud.h  aqext.cc  aqext.h  aqext_android.cpp  aqext_android.h  aqextaud.cc  aqextaud.h  aqkey.cpp  aqkey.h  aqvfw.cc  asshole.cpp  asshole.h  audchk.cc  audchk.h  audconv.cc  audconv.h  audexto.cc  audexto.h  audi.cc  audi.h  audmix.cc  audmix.h  audmixs.cc  audmixs.h  audo.cc  audo.h  audout.cc  (+308 more)
bld/crypto5/: Android.mk  CMakeLists.txt  GNUmakefile  algparam.h  bench2.cpp  comp_def  comp_def.lcl  config.h  cryptdll.vcproj  cryptest.sln  cryptest.vcproj  cryptest_bds.cbproj  cryptest_bds.cbproj.local  cryptest_bds.groupproj  cryptest_bds.groupproj.local  cryptlib.cpp  cryptlib.vcproj  cryptlib_bds.cbproj  cryptlib_bds.cbproj.local  crypto5.pro  dll.h  dlltest.vcproj  fipstest.cpp  makefile.mk  misc.cpp  misc.h  nbtheory.cpp  oaep.cpp  pubkey.h  regtest.cpp  test.cpp  validat1.cpp  validat2.cpp  zlib.cpp
bld/crypto8/: Android.mk  CMakeLists.txt  config_asm.h  config_misc.h  config_os.h  cpu.cpp  crypto8.pro  wintest.bat
bld/dwcls/: Android.mk  CMakeLists.txt  LICENSE  README  addcr.lh  clist.c  comp_def  comp_trg  dwamap.h  dwassoc.h  dwbag.h  dwbagr.h  dwcls.files  dwcls.pro  dwcls_timer.cpp  dwcls_timer.h  dwdate.cpp  dwdate.h  dwhash.cpp  dwhash.h  dwhist2.cc  dwhist2.h  dwiter.h  dwlist.h  dwlista.h  dwmap.h  dwmapr.h  dwmaps.h  dwpipe.cpp  dwpipe.h  dwqbm.cpp  dwqbm.h  dwqbm2.h  dwqmap3.h  dwqmap4.h  dwscoped.h  dwset.h  dwsetr.h  dwstack.h  dwstr.cpp  (+18 more)
bld/gsm/: Android.mk  CMakeLists.txt  add.c  code.c  comp_def  comp_trg  config.h  debug.c  decode.c  gsm.h  gsm.pro  gsm_cr~1.c  gsm_de~1.c  gsm_de~2.c  gsm_en~1.c  gsm_ex~1.c  gsm_im~1.c  gsm_op~1.c  gsm_pr~1.c  long_t~1.c  lpc.c  prepro~1.c  private.h  proto.h  rpe.c  short_~1.c  table.c  toast.c  toast.h  toast_~1.c  toast_~2.c  toast_~3.c  toast_~4.c  unproto.h
bld/jhead/: Android.mk  CMakeLists.txt  changes.txt  comp_def  comp_trg  dwightnotes.txt  exif.cpp  gpsinfo.cpp  iptc.cpp  jhead.cpp  jhead.h  jhead.pro  jpgfile.cpp  jpgqguess.cpp  makefile  makernote.cpp  myglob.cpp  paths.cpp  sysjhead.h  tocpp.sh  tstlib.cpp  usage.html
bld/ogg/: CMakeLists.txt  mki-arg.sh  ogg.pro
bld/ppm/: Android.mk  CMakeLists.txt  comp_def  comp_trg  libppm1.c  libppm2.c  libppm4.c  libppm5.c  ppm.c  ppm.cpp  ppm.h  ppm.pro  ppmdraw.h
bld/qt-qml-models/: AUTHOR  CMakeLists.txt  QQmlObjectListModel.h  QtQmlModels.pri  QtQmlModels.pro  qt-qml-models.pro
bld/qt6drv/: CMakeLists.txt  audi_qt6.cpp  audo_qt6.cpp  qt6drv.pro  vgfix2.txt  vgqt6.cpp
bld/qtdrv/: CMakeLists.txt  README.txt  audi_qt.cpp  audi_qt.h  audo_qt.cpp  audo_qt.h  qtdrv.pro  stb_image_resize.h  vgqt.cpp  vgqt.h  vidaq.h
bld/speex/: CMakeLists.txt  ios-configure.sh  mki-arg.sh  speex.pro
bld/speexdsp-1.2.1/: CMakeLists.txt
bld/theora.1.2.x/: Android.mk  Android2.mk  Android3.mk  CMakeLists.txt  Makefile.in  aclocal.m4  config.h.in  configure  theora.1.2.x.pro
bld/toxd/: CMakeLists.txt  toxd.cpp  toxd.pro  toxd_plugin.h
bld/uv/: Android.mk  CMakeLists.txt  uv.pro
bld/v4lcap/: aextsdl.cc  (+10 more)
cdcx/: CMakeLists.txt  DEPS.txt  DLL-CRT-issues-win.txt  Info.plist.mac  NOTES.txt  README  README_LAYOUT  TODO.txt  about.cpp  about.h  about.ui  adminw.cpp  adminw.h  adminw.ui  aswitch.cpp  aswitch.h  autoupdate.cpp  autoupdate.h  autoupdate.ui  browsebox.cpp  browsebox.h  browsebox.ui  buildtime.h  cdcsync.cpp  cdcsync.h  cdcx.pro  cdcxpan.cpp  chattext.cpp  chattext.h  composer.cpp  composer.h  composer.ui  config.cpp  config.h  config.ui  croom.cpp  croom.h  croom.ui  cspw.cpp  cspw.h  (+108 more)
dwycobg/: CMakeLists.txt  dlli.h  dwycobg.cpp  dwycobg.pro
dynbld/: CMakeLists.txt  android-all.sh  android.sh  conf.cmake  subdirs.cmake
ftpreview/: CMakeLists.txt  conf.cmake  dlli.h  ftpreview.cpp  ftpreview.pro  subdirs.cmake
phoo/: .gitignore  AGENTS.md  About.qml  AdminBrowse.qml  AppDrawer.qml  AppDrawerForm.ui.qml  BUGS.txt  BareChatList.qml  BareConvList.qml  BlockLoader.qml  CMakeLists.txt  CQRes.qml  CallButtonLink.qml  CallButtons.qml  ChatList.qml  CircularImage.qml  ContactList.qml  ConvList.qml  ConvToolButton.qml  DSettings.qml  DeclarativeCamera.qml  DevGroup.qml  DwycoVidRec.qml  ForwardToList.qml  IgnoreListDialog.qml  Info.plist.cmake.ios  Info.plist.ios  Info.plist.mac  MessageYN.qml  Migrate.qml  MsgReport.qml  MsgReview.qml  MsgView.qml  MsgViewMenu.qml  MsgViewMenuTrash.qml  MultiSelectToolbar.qml  OLD_XCODE.txt  PINChangeDialog.qml  PINDialog.qml  PasswordChangeDialog.qml  (+126 more)
phoo_ndk/: CMakeLists.txt  conf.cmake  subdirs.cmake
rando/: About.qml  AppDrawer.qml  AppDrawerForm.ui.qml  CMakeLists.txt  CQRes.qml  CallButtons.qml  CameraButton.qml  CircularImage.qml  CircularImage2.qml  CircularProgressBar.qml  ConvList.qml  DSettings.qml  DeclarativeCamera.qml  FName.qml  GeoListView.qml  GridToggle.qml  Help.qml  Info.plist.cmake.ios  Info.plist.ios  Info.plist.mac  MapImage.qml  MessageYN.qml  Migrate.qml  MsgReport.qml  MsgView.qml  MultiSelectToolbar.qml  PasswordDialog.qml  PasswordSetDialog.qml  PhotoCaptureControls.qml  PhotoPreview.qml  PicPreview.qml  ProfileDialog.qml  ProgressRound.qml  README.txt  Reindex.qml  RestoreAutoBackup.qml  SimpDir.qml  SimpleMsgBrowse.qml  SimpleMsgList.qml  SimpleTagMsgBrowse.qml  (+64 more)
rando_dynbld/: CMakeLists.txt  android-all.sh  conf.cmake  subdirs.cmake  vccfg.h
test_dwyco/: CMakeLists.txt  subdirs.cmake  test_main.cpp  test_peer.cpp  test_roundtrip.sh
xfer/: CMakeLists.txt  TODO.txt  readme.txt  trcv.lh  tsnd.lh  xfer.cc  xfer.pro
(+1077 files in other folders)
